--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ footer{
         <p>I build high-converting Shopify stores that help brands grow sales with professional design & performance optimization.</p>
         <a href="https://wa.me/923137944130" class="btn">WhatsApp Me</a>
     </div>
-    <img src="profile image 2.png" alt="Muhammad Hamza Nazar">
+    <img src="images/pic.jpg" alt="Muhammad Hamza Nazar">
 </div>
 
 <!-- ABOUT -->
@@ -291,3 +291,4 @@ footer{
 
 </body>
 </html>
+
